--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,4 +37,6 @@ jobs:
 
       - name: Upload to BlueRacer
         run: bash <(curl -s https://app.blueracer.io/upload)
+        env:
+          BLUERACER_TOKEN: ${{ secrets.BLUERACER_TOKEN }}
 
